@@ -51,6 +51,10 @@ wxEVT\_TASKBAR\_RIGHT\_UP event.}
 wxEVT\_TASKBAR\_LEFT\_DCLICK event.}
 \twocolitem{{\bf EVT\_TASKBAR\_RIGHT\_DCLICK(func)}}{Process a
 wxEVT\_TASKBAR\_RIGHT\_DCLICK event.}
+\twocolitem{{\bf EVT\_TASKBAR\_CLICK(func)}}{This is a synonym for either
+EVT\_TASKBAR\_RIGHT\_DOWN or UP depending on the platform, use this event macro
+to catch the event which should result in the menu being displayed on the
+current platform.}
 \end{twocollist}%
 
 \latexignore{\rtfignore{\wxheading{Members}}}
